[package]
name = "hft3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.3.1"
futures-util = "0.3.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.108"